--- a/LeagueApplication1/packages.config
+++ b/LeagueApplication1/packages.config
@@ -35,7 +35,7 @@
   <package id="Xamarin.Forms.Theme.Base" version="1.0.0.43-pre1" targetFramework="portable-net45+win+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="Xamarin.Forms.Theme.Dark" version="1.0.0.43-pre1" targetFramework="portable-net45+win+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="Xamarin.Forms.Theme.Light" version="1.0.0.43-pre1" targetFramework="portable-net45+win+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
-  <package id="Xamarinos.AdMob.FormsPlugin" version="1.0.4" targetFramework="portable-net45+win+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+  <package id="Xamarinos.AdMob.FormsPlugin" version="1.0.4" targetFramework="portable45-net45+win8" />
   <package id="XLabs.Core" version="2.3.0-pre02" targetFramework="portable45-net45+win8" />
   <package id="XLabs.Forms" version="2.3.0-pre02" targetFramework="portable45-net45+win8" />
   <package id="XLabs.IoC" version="2.3.0-pre02" targetFramework="portable45-net45+win8" />
