--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,38 +1,86 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Acr.Support" version="2.1.0" targetFramework="xamarinios10" />
-  <package id="Acr.UserDialogs" version="6.2.6" targetFramework="xamarinios10" />
-  <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Acr.UserDialogs" version="6.3.3" targetFramework="xamarinios10" />
+  <package id="ExifLib.PCL" version="1.0.2-pre01" targetFramework="xamarinios10" />
   <package id="Forms9Patch" version="0.9.13.5" targetFramework="xamarinios10" developmentDependency="true" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="xamarinios10" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="1.6.0" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="9.0.2-beta1" targetFramework="xamarinios10" />
   <package id="Octane.Xam.VideoPlayer" version="1.2.1.0" targetFramework="xamarinios10" />
   <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
   <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
-  <package id="sqlite-net-pcl" version="1.2.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCL.bundle_green" version="0.9.3" targetFramework="xamarinios10" />
-  <package id="SQLitePCL.raw" version="0.9.3" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="sqlite-net-pcl" version="1.2.1" targetFramework="xamarinios10" />
+  <package id="SQLitePCL.bundle_green" version="0.9.4-pre1" targetFramework="xamarinios10" />
+  <package id="SQLitePCL.raw" version="0.9.4-pre1" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.2-pre20161207051304" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="System.AppContext" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Collections" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="xamarinios10" />
+  <package id="System.Console" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Globalization.Calendars" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.IO" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.IO.Compression" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.IO.Compression.ZipFile" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Linq" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Net.Sockets" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.ObjectModel" version="4.0.12" targetFramework="xamarinios10" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Threading" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Threading.Timer" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="xamarinios10" />
   <package id="Twixel" version="2.0.4" targetFramework="xamarinios10" />
-  <package id="Xam.Plugin.Connectivity" version="2.3.0.37-beta" targetFramework="xamarinios10" />
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.0.5" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Connectivity" version="2.3.0.41-beta" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1.8-beta" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.VideoPlayer" version="1.0.0-pre07" targetFramework="xamarinios10" />
-  <package id="Xamarin.Build.Download" version="0.2.2" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.3.163-pre3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Build.Download" version="0.4.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.CarouselView" version="2.3.0-pre2" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms.Pages" version="2.3.3.163-pre3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.Pages" version="2.3.3.175" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Theme.Base" version="1.0.0.43-pre1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Theme.Dark" version="1.0.0.43-pre1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Theme.Light" version="1.0.0.43-pre1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Google.iOS.MobileAds" version="7.11.0" targetFramework="xamarinios10" />
-  <package id="XLabs.Core" version="2.3.0-pre02" targetFramework="xamarinios10" />
-  <package id="XLabs.Forms" version="2.3.0-pre02" targetFramework="xamarinios10" />
-  <package id="XLabs.IoC" version="2.3.0-pre02" targetFramework="xamarinios10" />
-  <package id="XLabs.Platform" version="2.3.0-pre02" targetFramework="xamarinios10" />
-  <package id="XLabs.Serialization" version="2.3.0-pre02" targetFramework="xamarinios10" />
+  <package id="Xamarin.Google.iOS.MobileAds" version="7.13.0" targetFramework="xamarinios10" />
+  <package id="XLabs.Core" version="2.3.0-pre05" targetFramework="xamarinios10" />
+  <package id="XLabs.Forms" version="2.3.0-pre05" targetFramework="xamarinios10" />
+  <package id="XLabs.IoC" version="2.3.0-pre05" targetFramework="xamarinios10" />
+  <package id="XLabs.Platform" version="2.3.0-pre05" targetFramework="xamarinios10" />
+  <package id="XLabs.Serialization" version="2.3.0-pre05" targetFramework="xamarinios10" />
 </packages>
